--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <div class="windows-wrapper">
+        
+    </div>
 </body>
 </html>
