add some elements into markup

--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Css/index.css" type="text/css">
     <title>Document</title>
 </head>
 <body>
     <div class="windows-wrapper">
-        
+        <div class="submit-form">
+            <div class="submit-form__items-block items-block">
+                <div class="items-block__item"></div>
+            </div>
+        </div>
+        <script src="Js/index.js"></script>
     </div>
 </body>
 </html>
