create the items form elements

--- a/index.html
+++ b/index.html
@@ -10,9 +10,48 @@
 <body>
     <div class="windows-wrapper">
         <div class="submit-form">
-            <div class="submit-form__items-block items-block">
-                <div class="items-block__item"></div>
-            </div>
+            <form class="submit-form__items-block items-block">
+                <div class="items-block__item item">
+                    <h2>Client Details</h2>
+                    <div class="item_one-line">
+                        <input type="text" id="fname" name="fname" placeholder="First name"><br>
+                        <input type="text" id="lname" name="lname" placeholder="Last name"><br>
+                    </div>
+                    <input type="tel" id="phone" name="phone" placeholder="Phone"><br>
+                    <input type="email" id="email" name="email" placeholder="Email(optional)"><br><br>
+                    <!-- <input type="submit" value="Submit"> -->
+                </div>
+                <div class="items-block__item item">
+                    <h2>Client Details</h2>
+                    <div class="item_one-line">
+                        <input type="text" id="fname" name="fname" placeholder="First name"><br>
+                        <input type="text" id="lname" name="lname" placeholder="Last name"><br>
+                    </div>
+                    <input type="tel" id="phone" name="phone" placeholder="Phone"><br>
+                    <input type="email" id="email" name="email" placeholder="Email(optional)"><br><br>
+                    <!-- <input type="submit" value="Submit"> -->
+                </div>
+                <div class="items-block__item item">
+                    <h2>Client Details</h2>
+                    <div class="item_one-line">
+                        <input type="text" id="fname" name="fname" placeholder="First name"><br>
+                        <input type="text" id="lname" name="lname" placeholder="Last name"><br>
+                    </div>
+                    <input type="tel" id="phone" name="phone" placeholder="Phone"><br>
+                    <input type="email" id="email" name="email" placeholder="Email(optional)"><br><br>
+                    <!-- <input type="submit" value="Submit"> -->
+                </div>
+                <div class="items-block__item item">
+                    <h2>Client Details</h2>
+                    <div class="item_one-line">
+                        <input type="text" id="fname" name="fname" placeholder="First name"><br>
+                        <input type="text" id="lname" name="lname" placeholder="Last name"><br>
+                    </div>
+                    <input type="tel" id="phone" name="phone" placeholder="Phone"><br>
+                    <input type="email" id="email" name="email" placeholder="Email(optional)"><br><br>
+                    <!-- <input type="submit" value="Submit"> -->
+                </div>
+            </form>
         </div>
         <script src="Js/index.js"></script>
     </div>
