--- a/index.html
+++ b/index.html
@@ -14,43 +14,73 @@
                 <div class="items-block__item item">
                     <h2>Client Details</h2>
                     <div class="item_one-line">
-                        <input type="text" id="fname" name="fname" placeholder="First name"><br>
-                        <input type="text" id="lname" name="lname" placeholder="Last name"><br>
+                        <div>
+                            <input type="text" id="fname" name="fname" placeholder="First name"><br>
+                        </div>
+                        <div>
+                            <input type="text" id="lname" name="lname" placeholder="Last name"><br>
+                        </div>
                     </div>
-                    <input type="tel" id="phone" name="phone" placeholder="Phone"><br>
-                    <input type="email" id="email" name="email" placeholder="Email(optional)"><br><br>
-                    <!-- <input type="submit" value="Submit"> -->
+                    <div>
+                        <input type="tel" id="phone" name="phone" placeholder="Phone"><br>
+                    </div>
+                    <div>
+                        <input type="email" id="email" name="email" placeholder="Email(optional)"><br><br>
+                    </div>
+                </div>
+                <div class="items-block__item item">
+                    <h2>Job Details</h2>
+                    <div class="item_one-line">
+                        <div>
+                            <input type="text" id="fname" name="fname" placeholder="First name"><br>
+                        </div>
+                        <div>
+                            <input type="text" id="lname" name="lname" placeholder="Last name"><br>
+                        </div>
+                    </div>
+                    <div>
+                        <input type="tel" id="phone" name="phone" placeholder="Phone"><br>
+                    </div>
+                    <div>
+                        <input type="email" id="email" name="email" placeholder="Email(optional)"><br><br>
+                    </div>
+                </div>
+                <div class="items-block__item item">
+                    <h2>Scheduled</h2>
+                    <div class="item_one-line">
+                        <div>
+                            <input type="text" id="fname" name="fname" placeholder="First name"><br>
+                        </div>
+                        <div>
+                            <input type="text" id="lname" name="lname" placeholder="Last name"><br>
+                        </div>
+                    </div>
+                    <div>
+                        <input type="tel" id="phone" name="phone" placeholder="Phone"><br>
+                    </div>
+                    <div>
+                        <input type="email" id="email" name="email" placeholder="Email(optional)"><br><br>
+                    </div>
                 </div>
                 <div class="items-block__item item">
                     <h2>Client Details</h2>
                     <div class="item_one-line">
-                        <input type="text" id="fname" name="fname" placeholder="First name"><br>
-                        <input type="text" id="lname" name="lname" placeholder="Last name"><br>
+                        <div>
+                            <input type="text" id="fname" name="fname" placeholder="First name"><br>
+                        </div>
+                        <div>
+                            <input type="text" id="lname" name="lname" placeholder="Last name"><br>
+                        </div>
                     </div>
-                    <input type="tel" id="phone" name="phone" placeholder="Phone"><br>
-                    <input type="email" id="email" name="email" placeholder="Email(optional)"><br><br>
-                    <!-- <input type="submit" value="Submit"> -->
-                </div>
-                <div class="items-block__item item">
-                    <h2>Client Details</h2>
-                    <div class="item_one-line">
-                        <input type="text" id="fname" name="fname" placeholder="First name"><br>
-                        <input type="text" id="lname" name="lname" placeholder="Last name"><br>
+                    <div>
+                        <input type="tel" id="phone" name="phone" placeholder="Phone"><br>
                     </div>
-                    <input type="tel" id="phone" name="phone" placeholder="Phone"><br>
-                    <input type="email" id="email" name="email" placeholder="Email(optional)"><br><br>
-                    <!-- <input type="submit" value="Submit"> -->
-                </div>
-                <div class="items-block__item item">
-                    <h2>Client Details</h2>
-                    <div class="item_one-line">
-                        <input type="text" id="fname" name="fname" placeholder="First name"><br>
-                        <input type="text" id="lname" name="lname" placeholder="Last name"><br>
+                    <div>
+                        <input type="email" id="email" name="email" placeholder="Email(optional)"><br><br>
                     </div>
-                    <input type="tel" id="phone" name="phone" placeholder="Phone"><br>
-                    <input type="email" id="email" name="email" placeholder="Email(optional)"><br><br>
-                    <!-- <input type="submit" value="Submit"> -->
                 </div>
+                
+                <input class="items-block__submit" type="submit" value="Submit">
             </form>
         </div>
         <script src="Js/index.js"></script>
