add custom fields and logic

--- a/index.html
+++ b/index.html
@@ -76,11 +76,12 @@
                         <div>
                             <input type="text" id="area" name="area" list="fruit-list" placeholder="Area">
                             <datalist id="fruit-list">
-                                <option value="Apple">
-                                <option value="Banana">
-                                <option value="Cherry">
-                                <option value="Durian">
-                                <option value="Elderberry">
+                                <option value="Tampa">
+                                <option value="Miami">
+                                <option value="Orlando">
+                                <option value="Houston">
+                                <option value="Charlotte">
+                                <option value="Austin">
                             </datalist>
                         </div>
                     </div>
